# app-mock-lixi-valfirm

./: .gitignore  .pylintrc  Dockerfile  Pipfile  README.md  ab_service.py  docker-compose.ci.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: check.yml  dependabot-automerge.yml  deploy.yml  master_ab-valuations-services.yml  master_lixi-mock-valfirm-service.yml
files/: ValuationTransaction_1_6.xsd  sample_request.xml  valid_message.xml
lixi_mock_valfirm_service/: asgi.py  settings.py  urls.py  wsgi.py
lixi_mock_valfirm_service/service/: config.py  valfirm_service.py
mock_service/: asgi.py  settings.py  urls.py  wsgi.py
mock_service/lendfast/: service.py
mock_service/lendfast_oauth/: urls.py  views.py
mock_service/lixi_valfirm/: config.py  service.py  valfirm_service.py
mock_service/mocktrack/: urls.py  views.py
mock_service/pricefinder/: urls.py
mock_service/shared/: request_validator.py  token_generator.py
scripts/: e2e-local.sh  e2e.sh  lint.sh  start.sh  test.sh
test/: config.py  lendfast.http  lendfast_oauth2.http  lixi.http  mocktrack.http  pricefinder.http  test_lendfast_service.py  test_lixi_valfirm_message_validations.py  test_lixi_valfirm_service.py  test_mocktrack.py  test_pricefinder.py  test_pricefinder_auth.py  test_pricefinder_images.py  test_pricefinder_properties.py  test_pricefinder_suggest.py  test_shared_functions.py
test/http/: lixi.http
tests/: test_message_validations.py  test_validator_auth.py  test_validator_message.py
validators/: auth.py  message.py  valuation_message.py
(+33 files in other folders)
